# rust_near_game_of_life

./: .gitignore  Cargo.toml  build.sh
res/: game-of-life.wasm
src/: lib.rs
